feat: add github actions 1

--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -43,6 +43,7 @@ jobs:
         id: push
         uses: docker/build-push-action@v6
         with:
+          context: .
           file: ./Dockerfile
           push: 'true'
           tags: app.jar
