--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -43,8 +43,8 @@ jobs:
         id: push
         uses: docker/build-push-action@v6
         with:
-          context: .
-          file: ./Dockerfile
+          context: ./msbank
+          file: Dockerfile
           push: 'true'
           tags: app.jar
           labels: joellokota/andy-alex-app
